--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,16 +4,33 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
+  
   },
   "dependencies": {
+    "@mantine/core": "^6.0.19",
+    "axios": "^1.4.0",
+    "list": "^2.0.19",
+    "npm": "^9.8.1",
+    "react-json-pretty": "^2.2.0",
+    "react-spinners": "^0.13.8",
+    "vitest": "^0.34.2",
+    "@emotion/react": "^11.11.1",
+    "@mantine/hooks": "^6.0.19",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "sass": "^1.66.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
